--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
-    "update":"sh .deploy.sh"
+    "deploy":"sh deploy.sh"
   },
   "dependencies": {
     "core-js": "^3.6.5",
